@@ -753,6 +753,10 @@ function DOMUtils(doc: Document, settings: Partial<DOMUtilsSettings> = {}): DOMU
     const container = doc.createElement('div');
     const frag = doc.createDocumentFragment();
 
+    // Append the container to the fragment so as to remove it from
+    // the current document context
+    frag.appendChild(container);
+
     if (html) {
       container.innerHTML = html;
     }
@@ -760,6 +764,9 @@ function DOMUtils(doc: Document, settings: Partial<DOMUtilsSettings> = {}): DOMU
     while ((node = container.firstChild)) {
       frag.appendChild(node);
     }
+
+    // Remove the container now that all the children have been transferred
+    frag.removeChild(container);
 
     return frag;
   };
