@@ -5,68 +5,83 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import { HTMLElement, Node } from '@ephox/dom-globals';
-import Tools from 'tinymce/core/api/util/Tools';
-import SaxParser from 'tinymce/core/api/html/SaxParser';
+import { Cell, Obj } from '@ephox/katamari';
 import DOMUtils from 'tinymce/core/api/dom/DOMUtils';
-import Size from './Size';
+import SaxParser from 'tinymce/core/api/html/SaxParser';
+import Tools from 'tinymce/core/api/util/Tools';
 import { MediaData } from './Types';
-import { VideoScript, getVideoScriptMatch } from './VideoScript';
+import { getVideoScriptMatch, VideoScript } from './VideoScript';
+
+type AttrList = Array<{ name: string, value: string }> & { map: Record<string, string> };
 
 const DOM = DOMUtils.DOM;
 
-const getEphoxEmbedIri = function (elm: Node): string {
-  return DOM.getAttrib(elm, 'data-ephox-embed-iri');
+const trimPx = (value: string) => value.replace(/px$/, '');
+
+const getEphoxEmbedData = (attrs: AttrList): MediaData => {
+  const style = attrs.map.style;
+  const styles = style ? DOM.parseStyle(style) : { };
+  return {
+    type: 'ephox-embed-iri',
+    source: attrs.map['data-ephox-embed-iri'],
+    altsource: '',
+    poster: '',
+    width: Obj.get(styles, 'max-width').map(trimPx).getOr(''),
+    height: Obj.get(styles, 'max-height').map(trimPx).getOr('')
+  };
 };
 
-const isEphoxEmbed = function (html: string): boolean {
-  const fragment = DOM.createFragment(html);
-  return getEphoxEmbedIri(fragment.firstChild) !== '';
-};
-
-const htmlToDataSax = function (prefixes: VideoScript[], html: string): MediaData {
+const htmlToData = (prefixes: VideoScript[], html: string): MediaData => {
+  const isEphoxEmbed = Cell<boolean>(false);
   let data: any = {};
 
   SaxParser({
     validate: false,
     allow_conditional_comments: true,
     start (name, attrs) {
-      if (!data.source && name === 'param') {
-        data.source = attrs.map.movie;
-      }
-
-      if (name === 'iframe' || name === 'object' || name === 'embed' || name === 'video' || name === 'audio') {
-        if (!data.type) {
-          data.type = name;
+      if (isEphoxEmbed.get()) {
+        // Ignore any child elements if handling an EME embed
+      } else if (Obj.has(attrs.map, 'data-ephox-embed-iri')) {
+        isEphoxEmbed.set(true);
+        data = getEphoxEmbedData(attrs);
+      } else {
+        if (!data.source && name === 'param') {
+          data.source = attrs.map.movie;
         }
 
-        data = Tools.extend(attrs.map, data);
-      }
+        if (name === 'iframe' || name === 'object' || name === 'embed' || name === 'video' || name === 'audio') {
+          if (!data.type) {
+            data.type = name;
+          }
 
-      if (name === 'script') {
-        const videoScript = getVideoScriptMatch(prefixes, attrs.map.src);
-        if (!videoScript) {
-          return;
+          data = Tools.extend(attrs.map, data);
         }
 
-        data = {
-          type: 'script',
-          source: attrs.map.src,
-          width: String(videoScript.width),
-          height: String(videoScript.height)
-        };
-      }
+        if (name === 'script') {
+          const videoScript = getVideoScriptMatch(prefixes, attrs.map.src);
+          if (!videoScript) {
+            return;
+          }
 
-      if (name === 'source') {
-        if (!data.source) {
-          data.source = attrs.map.src;
-        } else if (!data.altsource) {
-          data.altsource = attrs.map.src;
+          data = {
+            type: 'script',
+            source: attrs.map.src,
+            width: String(videoScript.width),
+            height: String(videoScript.height)
+          };
         }
-      }
 
-      if (name === 'img' && !data.poster) {
-        data.poster = attrs.map.src;
+        if (name === 'source') {
+          if (!data.source) {
+            data.source = attrs.map.src;
+          } else if (!data.altsource) {
+            data.altsource = attrs.map.src;
+          }
+        }
+
+        if (name === 'img' && !data.poster) {
+          data.poster = attrs.map.src;
+        }
       }
     }
   }).parse(html);
@@ -76,24 +91,6 @@ const htmlToDataSax = function (prefixes: VideoScript[], html: string): MediaDat
   data.poster = data.poster || '';
 
   return data;
-};
-
-const ephoxEmbedHtmlToData = function (html: string): MediaData {
-  const fragment = DOM.createFragment(html);
-  const div = fragment.firstChild as HTMLElement;
-
-  return {
-    type: 'ephox-embed-iri',
-    source: getEphoxEmbedIri(div),
-    altsource: '',
-    poster: '',
-    width: Size.getMaxWidth(div),
-    height: Size.getMaxHeight(div)
-  };
-};
-
-const htmlToData = function (prefixes: VideoScript[], html: string): MediaData {
-  return isEphoxEmbed(html) ? ephoxEmbedHtmlToData(html) : htmlToDataSax(prefixes, html);
 };
 
 export {
