@@ -5,31 +5,27 @@
  * For commercial licenses see https://www.tiny.cloud/
  */
 
-import { HTMLElement } from '@ephox/dom-globals';
-import Writer from 'tinymce/core/api/html/Writer';
+import { Cell, Obj } from '@ephox/katamari';
+import DOMUtils from 'tinymce/core/api/dom/DOMUtils';
 import SaxParser from 'tinymce/core/api/html/SaxParser';
 import Schema from 'tinymce/core/api/html/Schema';
-import DOMUtils from 'tinymce/core/api/dom/DOMUtils';
-import Size from './Size';
+import Writer from 'tinymce/core/api/html/Writer';
 import { MediaData } from './Types';
-
-const DOM = DOMUtils.DOM;
 
 type AttrList = Array<{ name: string, value: string }> & { map: Record<string, string> };
 
-const setAttributes = function (attrs: AttrList, updatedAttrs: Record<string, any>) {
-  let name;
-  let i;
-  let value;
-  let attr;
+const DOM = DOMUtils.DOM;
 
-  for (name in updatedAttrs) {
-    value = '' + updatedAttrs[name];
+const addPx = (value: string) => /^[0-9.]+$/.test(value) ? (value + 'px') : value;
+
+const setAttributes = (attrs: AttrList, updatedAttrs: Record<string, any>) => {
+  for (const name in updatedAttrs) {
+    const value = '' + updatedAttrs[name];
 
     if (attrs.map[name]) {
-      i = attrs.length;
+      let i = attrs.length;
       while (i--) {
-        attr = attrs[i];
+        const attr = attrs[i];
 
         if (attr.name === name) {
           if (value) {
@@ -52,17 +48,21 @@ const setAttributes = function (attrs: AttrList, updatedAttrs: Record<string, an
   }
 };
 
-const normalizeHtml = function (html: string): string {
-  const writer = Writer();
-  const parser = SaxParser(writer);
-  parser.parse(html);
-  return writer.getContent();
+const updateEphoxEmbed = (data: Partial<MediaData>, attrs: AttrList) => {
+  const style = attrs.map.style;
+  const styleMap = style ? DOM.parseStyle(style) : { };
+  styleMap['max-width'] = addPx(data.width);
+  styleMap['max-height'] = addPx(data.height);
+  setAttributes(attrs, {
+    style: DOM.serializeStyle(styleMap)
+  });
 };
 
 const sources = ['source', 'altsource'];
 
-const updateHtmlSax = function (html: string, data: Partial<MediaData>, updateAll?: boolean): string {
+const updateHtml = (html: string, data: Partial<MediaData>, updateAll?: boolean): string => {
   const writer = Writer();
+  const isEphoxEmbed = Cell<boolean>(false);
   let sourceCount = 0;
   let hasImage;
 
@@ -83,63 +83,70 @@ const updateHtmlSax = function (html: string, data: Partial<MediaData>, updateAl
     },
 
     start (name, attrs, empty) {
-      switch (name) {
-        case 'video':
-        case 'object':
-        case 'embed':
-        case 'img':
-        case 'iframe':
-          if (data.height !== undefined && data.width !== undefined) {
-            setAttributes(attrs, {
-              width: data.width,
-              height: data.height
-            });
-          }
-          break;
-      }
-
-      if (updateAll) {
+      if (isEphoxEmbed.get()) {
+        // Don't make any changes to children of an EME embed
+      } else if (Obj.has(attrs.map, 'data-ephox-embed-iri')) {
+        isEphoxEmbed.set(true);
+        updateEphoxEmbed(data, attrs);
+      } else {
         switch (name) {
           case 'video':
-            setAttributes(attrs, {
-              poster: data.poster,
-              src: ''
-            });
-
-            if (data.altsource) {
+          case 'object':
+          case 'embed':
+          case 'img':
+          case 'iframe':
+            if (data.height !== undefined && data.width !== undefined) {
               setAttributes(attrs, {
+                width: data.width,
+                height: data.height
+              });
+            }
+            break;
+        }
+
+        if (updateAll) {
+          switch (name) {
+            case 'video':
+              setAttributes(attrs, {
+                poster: data.poster,
                 src: ''
               });
-            }
-            break;
 
-          case 'iframe':
-            setAttributes(attrs, {
-              src: data.source
-            });
-            break;
+              if (data.altsource) {
+                setAttributes(attrs, {
+                  src: ''
+                });
+              }
+              break;
 
-          case 'source':
-            if (sourceCount < 2) {
+            case 'iframe':
               setAttributes(attrs, {
-                src: data[sources[sourceCount]],
-                type: data[sources[sourceCount] + 'mime']
+                src: data.source
               });
+              break;
 
-              if (!data[sources[sourceCount]]) {
+            case 'source':
+              if (sourceCount < 2) {
+                setAttributes(attrs, {
+                  src: data[sources[sourceCount]],
+                  type: data[sources[sourceCount] + 'mime']
+                });
+
+                if (!data[sources[sourceCount]]) {
+                  return;
+                }
+              }
+              sourceCount++;
+              break;
+
+            case 'img':
+              if (!data.poster) {
                 return;
               }
-            }
-            sourceCount++;
-            break;
 
-          case 'img':
-            if (!data.poster) {
-              return;
-            }
-
-            hasImage = true;
-            break;
+              hasImage = true;
+              break;
+          }
         }
       }
 
@@ -147,35 +154,37 @@ const updateHtmlSax = function (html: string, data: Partial<MediaData>, updateAl
     },
 
     end (name) {
-      if (name === 'video' && updateAll) {
-        for (let index = 0; index < 2; index++) {
-          if (data[sources[index]]) {
-            const attrs: any = [];
-            attrs.map = {};
+      if (!isEphoxEmbed.get()) {
+        if (name === 'video' && updateAll) {
+          for (let index = 0; index < 2; index++) {
+            if (data[sources[index]]) {
+              const attrs: any = [];
+              attrs.map = {};
 
-            if (sourceCount < index) {
-              setAttributes(attrs, {
-                src: data[sources[index]],
-                type: data[sources[index] + 'mime']
-              });
+              if (sourceCount < index) {
+                setAttributes(attrs, {
+                  src: data[sources[index]],
+                  type: data[sources[index] + 'mime']
+                });
 
-              writer.start('source', attrs, true);
+                writer.start('source', attrs, true);
+              }
             }
           }
         }
-      }
 
-      if (data.poster && name === 'object' && updateAll && !hasImage) {
-        const imgAttrs: any = [];
-        imgAttrs.map = {};
+        if (data.poster && name === 'object' && updateAll && !hasImage) {
+          const imgAttrs: any = [];
+          imgAttrs.map = {};
 
-        setAttributes(imgAttrs, {
-          src: data.poster,
-          width: data.width,
-          height: data.height
-        });
+          setAttributes(imgAttrs, {
+            src: data.poster,
+            width: data.width,
+            height: data.height
+          });
 
-        writer.start('img', imgAttrs, true);
+          writer.start('img', imgAttrs, true);
+        }
       }
 
       writer.end(name);
@@ -183,25 +192,6 @@ const updateHtmlSax = function (html: string, data: Partial<MediaData>, updateAl
   }, Schema({})).parse(html);
 
   return writer.getContent();
-};
-
-const isEphoxEmbed = function (html: string): boolean {
-  const fragment = DOM.createFragment(html);
-  return DOM.getAttrib(fragment.firstChild, 'data-ephox-embed-iri') !== '';
-};
-
-const updateEphoxEmbed = function (html: string, data: Partial<MediaData>): string {
-  const fragment = DOM.createFragment(html);
-  const div = fragment.firstChild as HTMLElement;
-
-  Size.setMaxWidth(div, data.width);
-  Size.setMaxHeight(div, data.height);
-
-  return normalizeHtml(div.outerHTML);
-};
-
-const updateHtml = function (html: string, data: Partial<MediaData>, updateAll?: boolean) {
-  return isEphoxEmbed(html) ? updateEphoxEmbed(html, data) : updateHtmlSax(html, data, updateAll);
 };
 
 export default {
